Sep 21 Live Stream

--- a/playing-with-swiftui/playing-with-swiftui/Info.plist
+++ b/playing-with-swiftui/playing-with-swiftui/Info.plist
@@ -46,5 +46,18 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+    <key>UIApplicationShortcutItems</key>
+    <array>
+        <dict>
+            <key>UIApplicationShortcutItemType</key>
+            <string>SearchAction</string>
+            <key>UIApplicationShortcutItemIconType</key>
+            <string>UIApplicationShortcutIconTypeSearch</string>
+            <key>UIApplicationShortcutItemTitle</key>
+            <string>Custom Search</string>
+            <key>UIApplicationShortcutItemSubtitle</key>
+            <string>Search for a sexy item</string>
+        </dict>
+    </array>
 </dict>
 </plist>
