--- a/android/startcomposin/app/src/main/AndroidManifest.xml
+++ b/android/startcomposin/app/src/main/AndroidManifest.xml
@@ -10,6 +10,10 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Startcomposin">
         <activity
+            android:name=".ui.SessionActivity"
+            android:label="@string/title_activity_session"
+            android:theme="@style/Theme.Startcomposin.NoActionBar"></activity>
+        <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
             android:theme="@style/Theme.Startcomposin.NoActionBar">
